# Robotin

./: .gitignore  LICENSE  Makefile  README.md
docs/: architecture.md  development.md  github_issues.md  protocol.md  roadmap.md  safety.md
firmware/: README.md
raspberry/: README.md  pyproject.toml
raspberry/robotin/: __init__.py  main.py
raspberry/robotin/adapters/: __init__.py  base.py  face_adapter.py  head_adapter.py  light_adapter.py  motor_adapter.py  serial_transport.py
raspberry/robotin/ai/: __init__.py  intent_schema.py  mock_intent_service.py
raspberry/robotin/config/: devices.yaml  robot.yaml
raspberry/robotin/events/: event_bus.py
raspberry/robotin/orchestrator/: __init__.py  intent_router.py  orchestrator.py  state_machine.py
raspberry/robotin/protocol/: __init__.py  json_lines.py  messages.py  parser.py
raspberry/robotin/safety/: __init__.py  safety_manager.py  watchdog.py
raspberry/robotin/vision/: mock_camera_service.py
raspberry/robotin/voice/: mock_stt.py  mock_tts.py
raspberry/tests/: test_face_adapter.py  test_intent_router.py  test_protocol_parser.py  test_safety_manager.py  test_simulation_boot.py  test_state_machine.py
schemas/: ai_intent.schema.json  command.schema.json  event.schema.json
simulations/: fake_face.py  fake_head.py  fake_lights.py  fake_motor.py
tasks/: phase_00_foundation_hardware_docs.md  phase_01_face.md  phase_02_serial_protocol.md  phase_03_ai_expressions.md  phase_04_mouth.md  phase_05_head_servos.md  phase_06_vision.md  phase_07_movement.md  phase_08_obstacles.md
tools/: _path.py  face_demo.py  (+6 more)
(+61 files in other folders)
