[project]
name = "robotin"
version = "0.1.0"
description = "Robotin Raspberry Pi control layer"
requires-python = ">=3.10"
dependencies = [
  "pyyaml>=6.0",
]

[project.optional-dependencies]
serial = ["pyserial>=3.5"]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

